# jsolve

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt  main.cpp  models.cpp  models.h  test.cpp  work.cpp  work.h
benchmarks/: CMakeLists.txt  bench.cpp  bench.h
benchmarks/google/: GoogleBenchmark.cmake
data/: CMakeLists.txt  example2.mps  models.cpp  models.h
data/examples/: example2.mps  example4.mps
include/: logging.h
include/jsolver/: logging.cpp  matrix.h  tools.h
jsolver/: CMakeLists.txt  logging.h  main.cpp  matrix.h  test.cpp  tools.h
jsolver/maths/: matrix.h
jsolver/scratch/: test.cpp  test.h
lib/: CMakeLists.txt  constraint.cpp  constraint.h  counter.h  jsolve.h  logging.cpp  logging.h  lu_factor.h  matrix.h  matrix_error.cpp  matrix_error.h  matrix_free_function.hpp  matrix_inverse.hpp  matrix_iterator.h  matrix_operator.hpp  matrix_range.cpp  matrix_range.h  model.cpp  model.h  mps.cpp  mps.h  primal_revised.cpp  primal_revised.h  primal_standard.cpp  primal_standard.h  scratch.h  simplex.cpp  simplex.h  simplex_common.cpp  simplex_common.h  solution.h  solve_error.cpp  solve_error.h  solve_gauss.h  solver_error.h  tools.h  variable.cpp  variable.h
netlib/: benchmark.py
netlib/mps/: blend.mps
tests/: CMakeLists.txt  includes.h  main.cpp  test_constraint.cpp  test_includes.h  test_lu_factor.cpp  test_matrix.cpp  test_matrix_free_function.cpp  test_matrix_free_functions.cpp  test_matrix_inverse.cpp  test_matrix_iterator.cpp  test_matrix_operator.cpp  test_matrix_operators.cpp  test_matrix_range.cpp  test_model.cpp  test_mps.cpp  test_simplex.cpp  test_solve_gauss.cpp  test_utils.h  test_variable.cpp
tests/mps_examples/: example1.mps  example3.mps  example5.mps  example_with_free.mps
